fix: Update image optimization config for Vercel deployment
- Move deviceSizes and imageSizes to next.config.js
- Optimize image settings for Core Web Vitals
- Maintain responsive image strategy
- Keep WebP format with fallbacks

--- a/vercel.json
+++ b/vercel.json
@@ -11,9 +11,7 @@
   "images": {
     "sizes": [640, 1024, 1920],
     "formats": ["image/webp"],
-    "minimumCacheTTL": 60,
-    "deviceSizes": [640, 1024, 1920],
-    "imageSizes": [320, 480, 768]
+    "minimumCacheTTL": 60
   },
   "headers": [
     {
