chore: Update .gitignore to exclude internal documentation
- Add documentation files to gitignore
- Exclude cc-prompt.md, cc-chronicle.md, cc-regression.md
- Exclude IMPLEMENTATION_PLAN.md and REGRESSIONS.md
- Keep deployment and performance configurations tracked

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,13 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# Documentation and internal files
+docs/cc-prompt.md
+docs/cc-chronicle.md
+docs/cc-regression.md
+docs/IMPLEMENTATION_PLAN.md
+docs/REGRESSIONS.md
+
 # Sitemap
 sitemap*.xml
 
